Fixed location services message overlap on the kitchenMap page for resolutions 300px to 500px

--- a/public/css/kitchenMap.css
+++ b/public/css/kitchenMap.css
@@ -40,7 +40,7 @@ body {
   padding: 2vh;
   text-align: center;
   font-size: 16pt;
-  margin-top: 110px;
+  margin-top: 160px;
   margin-bottom: 60px;
 }
 
